--- a/src/App.css
+++ b/src/App.css
@@ -5,17 +5,20 @@
   --mainDark: #232528;
   --mainYellow: #ffa400;
 }
-
+.row{
+  margin-left: 0px !important;
+  margin-right: 0px !important
+}
 body {
-  font-family: "Oswald", sans-serif !important;
+  /* font-family: "Oswald", sans-serif !important; */
   background: var(--mainWhite) !important;
   color: var(--mainDark) !important;
+  font-family: "Permanent Marker", cursive;
+  font-size: none;
 }
 
 .text-title {
-  font-family: "Permanent Marker", cursive;
-  letter-spacing: .3rem;
-  /* text-transform: uppercase; */
+  letter-spacing: 0.3rem;
 }
 
 .text-blue {
@@ -25,9 +28,9 @@ body {
 .btn-black {
   background: transparent;
   font-size: 0.8rem !important;
-  color: var(--mainDark); 
+  color: var(--mainDark);
   border-radius: 0 !important;
-  border: 0.1rem solid var(--mainDark) !important; 
+  border: 0.1rem solid var(--mainDark) !important;
 }
 
 .btn-black:hover {
@@ -55,19 +58,45 @@ body {
   transform: translate(-50%, -50%);
   color: white;
   text-align: center;
-
 }
-.slider-overlay.show{
+.slider-overlay.show {
   animation: fadeIn 3s;
-
 }
+
+.box {
+  background: #ffffff;
+  text-align: center;
+  border: 1px solid rgba(97, 119, 152, 0.2);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
+  :first-child {
+    padding: 20px 0;
+  }
+  :last-child {
+    padding: 0 26px;
+  }
+}
+
+.slider {
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-between;
+  button {
+    background-color: inherit;
+  }
+}
+
+.card-visit:hover{
+  transform: scale(1.1);
+}
+
 @keyframes fadeIn {
   0% {
     opacity: 0;
-    transform: translate(-30%,-30%);
+    transform: translate(-30%, -30%);
   }
   100% {
     opacity: 1;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
   }
 }
