--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,22 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 :root {
   --mainBlue: #2a2a7a;
   --lightBlue: #009ffd;
-  --mainWhite: #f3f3f3;
+  /* --mainWhite: #f3f3f3; */
+  --mainWhite: #fff;
   --mainDark: #232528;
   --mainYellow: #ffa400;
 }
-.row{
+.row {
   margin-left: 0px !important;
-  margin-right: 0px !important
+  margin-right: 0px !important;
 }
 body {
   /* font-family: "Oswald", sans-serif !important; */
   background: var(--mainWhite) !important;
   color: var(--mainDark) !important;
-  font-family: "Permanent Marker", cursive;
+  font-family: "Montserrat", sans-serif !important;
   font-size: none;
 }
 
@@ -58,9 +61,10 @@ body {
   transform: translate(-50%, -50%);
   color: white;
   text-align: center;
+  width: 70%;
 }
 .slider-overlay.show {
-  animation: fadeIn 3s;
+  animation: slideInUp ease 3s;
 }
 
 .box {
@@ -86,14 +90,33 @@ body {
   }
 }
 
-.card-visit:hover{
-  transform: scale(1.1);
+.card {
+  height: 100%;
+  justify-content: space-between;
 }
 
-@keyframes fadeIn {
+.card-visit {
+  transition: all ease 0.3s;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+  border-radius: 15px;
+}
+
+.card-visit:hover {
+  transform: scale(1.05);
+}
+
+.hover-up {
+  transition: all ease 0.3s;
+}
+
+.hover-up:hover {
+  transform: translateY(-15px);
+}
+
+@keyframes slideInUp {
   0% {
     opacity: 0;
-    transform: translate(-30%, -30%);
+    transform: translate(-50%, 30%);
   }
   100% {
     opacity: 1;
