--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-
+@import "~slick-carousel/slick/slick.css";
+@import "~slick-carousel/slick/slick-theme.css";
 :root {
   --mainBlue: #2a2a7a;
   --lightBlue: #009ffd;
@@ -81,15 +82,6 @@ body {
   }
 }
 
-.slider {
-  margin-top: 20px;
-  display: flex;
-  justify-content: space-between;
-  button {
-    background-color: inherit;
-  }
-}
-
 .card {
   height: 100%;
   justify-content: space-between;
@@ -113,6 +105,21 @@ body {
   transform: translateY(-15px);
 }
 
+.fade-left {
+  animation-name: fadeInLeft;
+  animation-duration: 1s;
+}
+
+.fade-right {
+  animation-name: fadeInRight;
+  animation-duration: 1s;
+}
+
+.fade-bottom {
+  animation-name: fadeInBottom;
+  animation-duration: 1s;
+}
+
 @keyframes slideInUp {
   0% {
     opacity: 0;
@@ -121,5 +128,41 @@ body {
   100% {
     opacity: 1;
     transform: translate(-50%, -50%);
+  }
+}
+
+@keyframes fadeInLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-100px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+@keyframes fadeInRight {
+  0% {
+    opacity: 0;
+    transform: translateX(100px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+@keyframes fadeInBottom {
+  0% {
+    transform: translateY(100px);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translateY(0);
+    opacity: 1;
   }
 }
