--- a/src/App.css
+++ b/src/App.css
@@ -164,68 +164,44 @@ a {
 /* 404 css */
 
 .background_404 {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: linear-gradient(var(--black_404), var(--blue_404));
+  background: linear-gradient(#0c0e10, #446182);
 }
 
-.background_404 .ground {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 25vh;
-  background-color: var(--black_404);
+.h-5 {
+  height: 3rem;
 }
 
-.container_404 {
-  position: relative;
-  margin: 0 auto;
-  width: 85%;
-  height: 100vh;
+.pb-25vh {
   padding-bottom: 25vh;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
 }
 
-.left-section,
-.right-section {
-  position: relative;
-}
-
-.left-section {
+.w-40 {
   width: 40%;
 }
 
-.left-section .inner-content {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
 .heading_404 {
-  text-align: center;
   font-size: 9em;
   line-height: 1.3em;
   margin: 2rem 0 0.5rem 0;
-  padding: 0;
   text-shadow: 0 0 1rem #fefefe;
 }
-
+@media (max-width: 768px) {
+  .heading_404 {
+    font-size: 7em;
+    line-height: 1.15;
+    margin: 0;
+  }
+  .subheading_404 {
+    font-size: 1.3em;
+    line-height: 1.15;
+    max-width: 100%;
+  }
+}
 .subheading_404 {
-  text-align: center;
   max-width: 480px;
   font-size: 1.5em;
   line-height: 1.15em;
   padding: 0 1rem;
-  margin: 0 auto;
-}
-
-.right-section {
-  width: 50%;
 }
 
 .svgimg {
