--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,6 @@ a {
   background-color: transparent;
 }
 
-
 .text-blue {
   color: var(--mainBlue);
 }
@@ -272,6 +271,15 @@ a {
   font-size: 40px !important;
 }
 
+.btn {
+  background-color: #000;
+}
+
+.btn:hover {
+  background-color: #000;
+  color: #ffffff;
+}
+
 @keyframes slideInUp {
   0% {
     opacity: 0;
@@ -367,11 +375,9 @@ a {
     width: 80px;
     height: 80px;
   }
-  .slick-arrow{
-    display:none !important;
+  .slick-arrow {
+    display: none !important;
   }
-  
-  
 }
 
 @media (min-width: 767px) {
