--- a/src/App.css
+++ b/src/App.css
@@ -277,7 +277,6 @@ a {
   font-size: 40px !important;
 }
 
-
 @keyframes slideInUp {
   0% {
     opacity: 0;
@@ -362,6 +361,9 @@ a {
     line-clamp: var(--line, 4);
     -webkit-line-clamp: var(--line, 4);
   }
+  .w-mw992-100 {
+    width: 100%;
+  }
 }
 
 @media (max-width: 768px) {
@@ -385,7 +387,9 @@ a {
   .slick-arrow {
     display: none !important;
   }
-  
+  .w-mw768-75 {
+    width: 75%;
+  }
 }
 
 @media (min-width: 767px) {
