--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,7 @@ a {
   color: var(--mainBlue);
 }
 
-.fs-45{
+.fs-45 {
   font-size: 45px;
   font-weight: bold;
 }
@@ -130,10 +130,11 @@ a {
   -webkit-line-clamp: var(--line, 1);
 }
 
-.cover{
+.cover {
   object-fit: cover;
-  
 }
+
+
 /* coming soon */
 
 .comingsoon {
@@ -247,8 +248,6 @@ a {
   font-size: 40px !important;
 }
 
-
-
 @keyframes slideInUp {
   0% {
     opacity: 0;
@@ -359,11 +358,15 @@ a {
   .w-mw768-75 {
     width: 75%;
   }
-  .ratio-md-4x3{
+  .ratio-md-4x3 {
     --bs-aspect-ratio: 75% !important;
   }
 }
-
+@media (min-width: 992px) {
+  .border-lg-none{
+    border: 0px !important;
+  }
+}
 @media (min-width: 767px) {
   .text-title {
     letter-spacing: 0.3rem;
@@ -371,13 +374,13 @@ a {
 }
 
 @media (max-width: 576px) {
-  .ratio-sm-1x2{
+  .ratio-sm-1x2 {
     --bs-aspect-ratio: 150% !important;
   }
 }
 
 @media (max-width: 280px) {
-  .fs-45{
+  .fs-45 {
     font-size: 30px;
   }
 }
